# FormantShift

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
plugins/VoiceModeler/: CMakeLists.txt
plugins/VoiceModeler/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimplePitchShifter.cpp  SimplePitchShifter.h
